# labProgrammazione

./: Application.cpp  Application.h  BlockedObserver.cpp  BlockedObserver.h  CMakeLists.txt  Collection.cpp  Collection.h  Note.cpp  Note.h  Observer.cpp  Observer.h  Subject.cpp  Subject.h  main.cpp
test/: ApplicationFIxture.cpp  ApplicationTest.cpp  CMakeLists.txt  CollectionFixture.cpp  CollectionTest.cpp  runAllTests.cpp
